<resources>
    <string name="app_name">Counter App</string>
    <string name="inc">+</string>
    <string name="dec">-</string>
    <string name="zero">0</string>
    <string name="my_counter">My Counter</string>
    <string name="explicit_intent">Explicit Intent</string>
    <string name="open_main_activity">Open Main Activity</string>
    <string name="implicit_intent">Implicit Intent</string>
    <string name="data">Data</string>
    <string name="open_web_page">Open Web Page</string>
    <string name="dial_number">Dial Number</string>
    <string name="share_text">Share Text</string>
    <string name="go">Go</string>
    <string name="send">Send</string>
    <string name="send_back">SEND BACK</string>
    <string name="textview">TextView</string>
    <string name="send_and_recieve_data">Send and Recieve Data</string>
</resources>